kube-system/templates/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
  labels:
    #! properly label the kube-system namespace so it can be targetted by network policies
    namespace.kubernetes.io/name: kube-system
