kube-system/templates/network_policy.yml
#@ load("@ytt:data", "data")

#@ if data.values.enable_network_policy:
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kube-system
  namespace: kube-system
spec:
  podSelector: {}
  ingress:
  - from: #! allow access from itself
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: kube-system
      podSelector: {}
  - from: #! allow access to core-dns from everywhere
    - namespaceSelector: {}
      podSelector: {}
    ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
  - from: #! allow access to core-dns for prometheus
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: prometheus
      podSelector: {}
    ports:
    - port: 9153
  - from: #! allow access to metrics-server from everywhere
    - namespaceSelector: {}
      podSelector: {}
    ports:
    - port: 443
#@ end
